chore rename "pairsona" to "channelserver"
It's not dead. Just pining for the fjords.

Issue #26

--- a/spake2_demo/static/index.html
+++ b/spake2_demo/static/index.html
@@ -50,7 +50,7 @@
 
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script src="pairsona_spake2.js"></script>
-        <script src="pairsona.js"></script>
+        <script src="spake2_demo.js"></script>
         <script>
 
   $(() => {
